#AWE-4000R Project

noinst_LIBRARIES = libaweskjywxml.a

#libaweywxml_a_SOURCES = YWXML_SKSBQTYXXCX.cpp YWXML_BSPFPCX.cpp YWXML_SKPBSP.cpp YWXML_FPCX.cpp YWXML_FPZF.cpp YWXML_FPKJ.cpp YWXML_KLBG.cpp YWXML_GPXXXPJS.cpp YWXML_GPXXXP.cpp YWXML_GPXXCX.cpp YWXML_SQSLCX.cpp YWXML_JKSJCX.cpp YWXML_BSPXXCX.cpp YWXML_SKPXXCX.cpp YWXML_FJTH.cpp YWXML_FPDR.cpp YWXML_FPGX.cpp YWXML_FPSSSC.cpp YWXML_LXXXXP.cpp YWXML_TJXXCX.cpp CTjxxhz.cpp YWXML_JKHC.cpp YWXML_SJCB.cpp CDeclare.cpp YWXML_BSPFPSH.cpp YWXML_BSPFPFF.cpp YWXML_SKSBBHCX.cpp YWXmlBase.cpp \
#						NETXML_QLJS.cpp NETXML_WLCB.cpp NETXML_FPSCJGHQ.cpp NETXML_FPSC.cpp NETXML_WLLQFPJGQR.cpp NETXML_WLLQFP.cpp NETXML_LXXXSC.cpp 
libaweskjywxml_a_SOURCES = SKJNETXML_QLJS.cpp SKJNETXML_WLCB.cpp SKJNETXML_FPSCJGHQ.cpp SKJNETXML_FPSC.cpp  SKJYWXmlBase.cpp

INCLUDES = -I../../SYS -I../../DRV -I../../DB -I../../LIB -I../COMMON -I../SERVXML -I../ -I./ 
